kubernetes/main/apps/network/external-services/hades/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: hades
  labels:
    kubernetes.io/service-name: hades
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.0.3
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: http
    port: 5000
    protocol: TCP
    appProtocol: http
