kubernetes/main/apps/network/external-services/hades/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hades
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
      appProtocol: http
  clusterIP: None
